@@ -1,3 +1,8 @@
+2002-01-30  Sam Steingold  <sds@gnu.org>
+
+	* io.d (pr_orecord): print EQUALP hash tables correctly
+	(pr_kvtable): new function, used by pr_orecord()
+
 2002-01-29  Sam Steingold  <sds@gnu.org>
 
 	* hashtabl.d (check_hashtable): new macro
